--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,9 @@
+@charset "UTF-8";
 body {
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
-  font-family: "PT Sans Narrow", verdana, sans-serif; }
+  font-family: "PT Sans Narrow", verdana, sans-serif;
+  width: 1000px; }
 
 a:link, a:hover, a:visited {
   color: white;
@@ -13,24 +15,30 @@ a:hover {
 header {
   background-color: #FDF3F3;
   display: flex;
-  justify-content: space-between; }
+  justify-content: space-between;
+  align-items: center; }
 
 .logo {
   display: flex;
-  margin: 2%;
+  margin-left: 5em;
   font-family: Verdana, sans-serif;
-  font-weight: 800;
-  font-size: 22px; }
+  font-weight: 800; }
+
+.logotext {
+  padding-top: 0.4em;
+  padding-right: 0.1em;
+  font-size: 1.6em; }
 
 .logoCF {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 45px;
-  height: 45px;
+  width: 1.7em;
+  height: 1.7em;
   background-color: #bf2524;
   color: white;
-  border-radius: 50%; }
+  border-radius: 50%;
+  font-size: 2em; }
 
 .ad {
   margin: 2%; }
@@ -74,18 +82,19 @@ main > h1 {
   width: 40%; }
 
 .shield h2 {
-  width: 40%; }
+  width: 60%; }
 
 .shield {
   margin: 2% auto 0;
-  width: 50vw;
+  width: 55%;
   height: 450px;
   background-color: rgba(255, 255, 255, 0.85);
   border: darkgrey solid 2px;
   border-radius: 2px;
   display: flex;
   flex-direction: column;
-  align-items: center; }
+  align-items: center;
+  text-align: center; }
 
 form {
   display: flex;
@@ -99,26 +108,27 @@ form {
   padding: 4px; }
 
 .btnCalc {
-  width: 22%;
-  height: 1.5em;
-  font-size: 22px;
+  margin-top: 1em;
+  padding: 0.3em 3em;
+  font-size: 1.5em;
   background-color: #449236;
   color: white;
-  border-radius: 4px;
+  border-radius: 0.4em;
   border-style: none; }
 
 #result {
   visibility: hidden;
-  padding-top: 10vh;
+  padding-top: 2em;
   font-size: 32px;
   color: #449236; }
 
 .textfield {
   text-align: center;
-  padding: 0 25vw; }
+  padding: 0 20%;
+  padding-bottom: 1em; }
 
-.textfield padding-top {
-  margin-bottom: 1.5em; }
+.tfSubtext {
+  font-size: 1.4em; }
 
 section {
   display: flex;
@@ -126,17 +136,11 @@ section {
   justify-content: space-between; }
 
 section ul {
-  padding: 0;
-  list-style: none; }
+  list-style-image: url("../img/check.jpg");
+  padding-left: 1.8em; }
 
 section li {
-  margin-top: 0.7em;
-  list-style-type: none;
-  padding-left: 25px;
-  margin-left: 0px;
-  background-image: url("../img/check.jpg");
-  background-repeat: no-repeat;
-  background-position: left center; }
+  padding-bottom: 0.8em; }
 
 .box {
   margin: 6% 4%;
@@ -154,14 +158,16 @@ footer {
   flex-direction: column;
   align-items: start; }
 
+footer .logo {
+  margin: 2em;
+  order: 1;
+  align-self: flex-end; }
+
+footer .copy {
+  order: 2;
+  align-self: center; }
+
 @media screen and (resolution: 292dpi), (orientation: portrait) {
-  .logo {
-    font-size: 5vh; }
-
-  .logoCF {
-    width: 7vh;
-    height: 7vh; }
-
   .ad {
     display: none; }
 
@@ -184,6 +190,11 @@ footer {
   .btnCalc {
     font-size: 5vh;
     width: 60%; }
+
+  section li:before {
+    content: "✓ ";
+    padding-left: 0;
+    background-image: none; }
 
   .box {
     width: 80%;
